--- a/Jenkinsfile.gradle
+++ b/Jenkinsfile.gradle
@@ -16,9 +16,9 @@ pipeline {
    stages {
       stage('prep-workspace') { 
          steps {
-            configFileProvider([configFile(fileId: '86dde059-684b-4300-b595-64e83c2dd217', targetLocation: 'settings.xml')]) {
-            }
-            configFileProvider([configFile(fileId: 'galasa-init-gradle', targetLocation: '.gradle/init.gradle')]) {
+            configFileProvider([configFile(fileId: '86dde059-684b-4300-b595-64e83c2dd217', targetLocation: 'settings.xml'),
+                               configFile(fileId: 'galasa-gradle-properties', targetLocation: '.gradle/gradle.properties'),
+                               configFile(fileId: 'galasa-init-gradle', targetLocation: '.gradle/init.gradle')]) {
             }
             dir('repository/dev.galasa') {
                deleteDir()
@@ -58,13 +58,12 @@ pipeline {
       stage('gradle') {
          steps {
             withCredentials([
-               string(credentialsId: 'galasa-gpg', variable: 'GPG'),
                usernamePassword(credentialsId: 'galasa-nexus', usernameVariable: 'MAVENUSERNAME', passwordVariable: 'MAVENPASSWORD'),
                usernamePassword(credentialsId: 'gradle-cache', usernameVariable: 'CACHEUSERNAME', passwordVariable: 'CACHEPASSWORD')
             ]) {
                withFolderProperties { 
                   dir('galasa-parent') {
-                     sh "gradle -s -Dgradle.user.home=${workspace}/.gradle -Psigning.gnupg.keyName=8534E695 -Psigning.gnupg.passphrase=$GPG ${GRADLE_CACHE} ${GRADLE_TASKS}"
+                     sh "gradle -s -Dgradle.user.home=${workspace}/.gradle ${GRADLE_CACHE} ${GRADLE_TASKS}"
                   }
                   dir('galasa-parent/dev.galasa.framework.obr') {
                      // sh "gradle -s -Dgradle.user.home=${workspace}/.gradle -Psigning.gnupg.keyName=8534E695 -Psigning.gnupg.passphrase=$GPG ${GRADLE_CACHE} genobr ${GRADLE_TASKS} --rerun-tasks --refresh-dependencies"
