--- a/galasa-parent/dev.galasa.framework.obr/pom.xml
+++ b/galasa-parent/dev.galasa.framework.obr/pom.xml
@@ -7,11 +7,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.15.0-SNAPSHOT</version>
+		<version>0.15.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.obr</artifactId>
-	<version>0.15.0-SNAPSHOT</version>
+	<version>0.15.0</version>
 	<!-- If updating version, reflect change in dev.galasa.uber.obr -->
 	<packaging>galasa-obr</packaging>
 
@@ -21,91 +21,91 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.k8s.controller</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.docker.controller</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.resource.management</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.metrics</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.authentication</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.bootstrap</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.health</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.runs</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.cps</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.ras</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.testcatalog</artifactId>
-			<version>0.15.0-SNAPSHOT</version>
+			<version>0.15.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
