--- a/galasa-parent/dev.galasa/pom.xml
+++ b/galasa-parent/dev.galasa/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.15.0-SNAPSHOT</version>
+		<version>0.15.0</version>
 	</parent>
 
 	<artifactId>dev.galasa</artifactId>
-	<version>0.15.0-SNAPSHOT</version>
+	<version>0.15.0</version>
 	<packaging>bundle</packaging>
 	
 
