--- a/galasa-parent/galasa-boot/build.gradle
+++ b/galasa-parent/galasa-boot/build.gradle
@@ -65,11 +65,11 @@ dependencies {
 // or referenced from.
 // The settings here are gathered together by the build process to create a release.yaml file 
 // which gathers-up all the packaging metadata about all the OSGi bundles in this component.
-ext.project_name=project.name
-ext.include_in_obr          = false
-ext.include_in_mvp          = true
-ext.include_in_isolated     = false
-ext.include_in_bom          = false
-ext.include_in_codecoverage = true
-ext.include_in_javadoc      = false
+ext.projectName=project.name
+ext.includeInOBR          = false
+ext.includeInMVP          = true
+ext.includeInIsolated     = false
+ext.includeInBOM          = false
+ext.includeInCodeCoverage = true
+ext.includeInJavadoc      = false
 
